# gtm-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: build.yml  deploy.yml  develop.yml  test.yml
doc/: server-setup.md
migrations/2020-11-21-162021_create_main_tables/: down.sql  up.sql
migrations/2020-11-21-162029_create_member_tables/: down.sql  up.sql
migrations/2021-01-24-130344_create_roles/: down.sql  up.sql
migrations/2021-01-24-131828_init_roles_data/: up.sql
migrations/2021-02-05-082833_group_accesses/: down.sql  up.sql
migrations/2021-02-14-150147_git_user_email/: down.sql  up.sql
migrations/2021-03-06-122212_oauth_login_system/: down.sql  up.sql
migrations/2021-03-14-182318_add_oauth_login_types/: down.sql  up.sql
migrations/2021-03-22-173037_gtm_sync_table/: down.sql  up.sql
migrations/2021-04-07-100539_fix_foreign_keys/: down.sql  up.sql
readme/: server-setup.md
src/: config.rs  errors.rs  lib.rs  main.rs  schema.rs  setup.rs
src/bitbucket/: mod.rs  resource.rs  service.rs  services.rs
src/commit/: db.rs  mod.rs  model.rs  resource.rs  routes.rs  service.rs
src/common/: git.rs  json.rs  mod.rs  random.rs  sql.rs
src/db/: commits.rs  files.rs  git_groups.rs  git_groups_repositories.rs  group_relations.rs  groups.rs  groups_repositories.rs  mod.rs  repositories.rs  timelines.rs  users.rs
src/domain/: mod.rs
src/email/: mod.rs  service.rs
src/file/: db.rs  mod.rs  model.rs  routes.rs
src/github/: resource.rs  service.rs
src/gitlab/: resource.rs  service.rs
src/group/: db.rs  dto.rs  dwh.rs  mapper.rs  mod.rs  model.rs  resource.rs  routes.rs  service.rs
src/group_access/: db.rs  mod.rs  model.rs  resource.rs  routes.rs  service.rs
src/group_group_member/: db.rs
src/helpers/: jwt.rs  mod.rs  timeline.rs
src/mappers/: timeline.rs
src/microsoft/: resource.rs  service.rs
src/models/: commit.rs  file.rs  git_group.rs  git_group_repository.rs  group.rs  group_relations.rs  group_repository.rs  hour_data.rs  hour_data_dwh.rs  interval.rs  mod.rs  repository.rs  timeline.rs  timeline_dwh.rs  user.rs
src/repository/: db.rs  mod.rs  model.rs  resource.rs  routes.rs  service.rs
src/role/: db.rs  mod.rs  model.rs  resource.rs  routes.rs
src/routes/: auth.rs  commits.rs  files.rs  groups.rs  login.rs  mod.rs  repositories.rs  timelines.rs  users.rs
src/security/: api_key.rs  config.rs  constants.rs  db.rs  jwt.rs  mod.rs  model.rs  oauth.rs  resource.rs  routes.rs  (+1 more)
(+102 files in other folders)
