[package]
name = "gtm-api"
version = "0.1.0"
authors = ["mjurge", "taannu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.44"
rust-crypto = "0.2.36"
chrono = { version = "0.4.17", features = ["serde"] }
diesel = { version = "1.4.5" , features = ["postgres", "chrono", "numeric"] }
diesel_migrations = "1.4.0"
validator = "0.10.0"
validator_derive = "0.10.0"
dotenv = "0.15.0"
chrono-tz = "0.5.3"
jsonwebtoken = "7.2.0"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]
