[package]
name = "gtm-api"
version = "0.2.2"
authors = ["mjurge", "taannu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.44"
rust-crypto = "0.2.36"
chrono = { version = "0.4.17", features = ["serde"] }
diesel = { version = "1.4.5" , features = ["postgres", "chrono", "numeric"] }
diesel_migrations = "1.4.0"
validator = "0.10.0"
validator_derive = "0.10.0"
dotenv = "0.15.0"
chrono-tz = "0.5.3"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
rocket_oauth2 = "0.4.1"
reqwest = { version = "0.10.9", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.47"
rand = "0.8.3"
futures = "0.3.13"
rocket_okapi = "0.6.0-alpha-1"
schemars = { version = "0.8.3", features = ["chrono"]}
okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"] }
itertools = "0.10.0"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]
